fix: ajustes dos comentários dos PR's - Removendo letras maiusculas da URL order histories - Refatorando atributos de camelCase para snake_case - Migrando arquivo up para down - Removendo comentários desnecessarios - Ajustes do Product Service - Implementacao do order product handler
