# internal/adapter/http/request/order_request.go
@@ -1,0 +1,5 @@
+package request
+
+type CreateOrderRequest struct {
+	CustomerID uint64 `json:"customer_id" binding:"required" example:"1"`
+}
